--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,5 +1,5 @@
 .clicked-card {
-    border: red solid 3px;
+    border: rgb(7, 50, 143) solid 3px;
   }
   .card img {
     aspect-ratio: 1/2;
@@ -12,4 +12,7 @@
   .link{
     color: black;
     text-decoration: none;
+  }
+  .card{
+    background-color: rgb(235, 244, 248);
   }
