--- a/src/components/cardDetails/cardDetails.css
+++ b/src/components/cardDetails/cardDetails.css
@@ -1,14 +1,31 @@
-.comment_section {
-    height: 1250px !important;
-    overflow-y: scroll !important;
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+  
+  .bordo{
+    text-align: center;
+    --bs-border-radius: 0.75rem!important;
   }
   
   .container {
-    padding-top: 20px !important;
+    padding-top: 20px !important
+    ;
   }
-  
+  .trasparente{
+    background-color: rgba(240, 255, 255, 0);
+  }
+  .distance{
+    padding: 15px;
+  }
+  .citazione{
+    padding: 0% !important;
+    font-size: x-large;
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
   .card {
     border: none !important;
+    
   }
   
   .card-title {
@@ -25,52 +42,10 @@
     max-width: 100% !important;
   }
   
-  .comment_section {
-    margin-top: 20px !important;
-  }
-  
-  /* Stile per il singolo commento */
-  .single-comment {
-    margin-bottom: 20px !important;
-    padding: 10px !important;
-    border: 1px solid #ccc !important;
-    border-radius: 5px !important;
-    background-color: #f9f9f9 !important;
-  }
-  
-  .comment-author {
-    font-weight: bold !important;
-  }
-  
-  .comment-date {
-    font-size: 14px !important;
-    color: #666 !important;
-  }
-  
-  .comment-description {
-    margin-top: 10px !important;
-  }
   
   /* Media query per adattare la visualizzazione su dispositivi di dimensioni ridotte */
   @media (max-width: 768px) {
     .card-img {
       height: auto !important;
       max-width: 100% !important;
-    }
-  
-    .single-comment {
-      padding: 8px !important;
-    }
-  
-    .comment-author {
-      font-size: 16px !important;
-    }
-  
-    .comment-date {
-      font-size: 12px !important;
-    }
-  
-    .comment-description {
-      font-size: 14px !important;
-    }
-  }
+    }}
