--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -16,7 +16,7 @@
     text-decoration: none;
   }
   .card{
-    background-color: rgb(235, 244, 248);
+    background-color:white;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     font-weight: 400;
